crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__var_declaration.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      VarDecl:
        mutable: true
        uses_deprecated_var: true
        name:
          name: x
          span:
            start: 4
            end: 5
        type_ref: ~
        init:
          Literal:
            - Number: 42
            - start: 8
              end: 10
        span:
          start: 0
          end: 11
