crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__var_declaration_with_type.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      VarDecl:
        mutable: false
        uses_deprecated_var: false
        name:
          name: x
          span:
            start: 4
            end: 5
            file: "<input>"
        type_ref:
          Named:
            - number
            - start: 7
              end: 13
              file: "<input>"
        init:
          Literal:
            - Number: 42
            - start: 16
              end: 18
              file: "<input>"
        span:
          start: 0
          end: 19
          file: "<input>"
